# AutoSteper

./: .coveragerc  .gitignore  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  VERSION  pyproject.toml  requirements.txt  setup.cfg  setup.py  version.txt
.github/workflows/: publish-on-pypi.yml  release-please.yml
doc/: AutoSteper.md
docs/: conf.py  index.rst  requirements.txt
docs/manual/: AnalysisFunctions.rst  Installation.rst  PlotWithFullereneDataParser_2.rst  SimulationModules.rst
docs/miscellaneous/: changelog.rst  license.rst
example/: C50_test.rar  ase_once.py  ase_twice.py  c50.rar  c50.xyz  xtb.py  xtb_once.py
gym/analysis/Path_Parser/: get_path_from_sim.py  plot_multiple_pathways.py  re_generate_pathways.py  update_sim_results.py
gym/analysis/SWR/: swr_info.txt  test_SWR_pipeline.py  test_count_SWR.py  test_find_SWR.py
gym/analysis/clc_failed/: swr_info.txt  test_clc_failed.py
src/autosteper/: Autosteper.py  __init__.py  ase_parallel_unit.py  autosteper.py  cage.py  cagesearch  checker.py  generator.py  old_optimizers.py  optimizers - Copy.py  optimizers.py  parallel_unit.py  parser.py  parser_old.py  parser_real_old.py  path_parser.py  plotter.py  skeleton.py  temp.py  tools.py
tests/: conftest.py  test_skeleton.py
tests/ASE_Optimizer/: passed_info.pickle  test_ASE_Optimizer.py  tmp.py
tests/Gaussian_Optimizer/: passed_info.pickle  test_Gaussian_Optimizer.py  test_Gaussian_Optimizer_remote.py
tests/XTB_Optimizer/: passed_info.pickle  test_xtb_optimizer.py  tmp.py
tests/build_unit/: C60Cl2.xyz
tests/deal_wrong_recursive/: passed_info.pickle  status_info.pickle  test_deal_wrong_recursive.py  tmp.py
tests/test_ASE_Optimizer/: status_info.pickle  test_ASE_Optimizer.py
tests/test_Gaussian_Optimizer/: test_Gaussian_Optimizer.py
tests/test_XTB_Optimizer/: test_xtb_optimizer.py  tmp.py  tmp2.py
tests/test_base/: test_base.py
tests/test_binding_e/: test_binding_e.py
tests/test_black_list/: C108.xyz  blk_with_replace.py  test_blk_list.py
tests/test_build_unit/: test_build_unit.py
tests/test_cook_disordered/: pathway_info.pickle  test_cook_disordered.py  tmp.py
tests/test_cutoff/: test_cutoff.py  test_cutoff_remote.py
tests/test_deal_wrong_recursive/: test_deal_wrong_recursive.py
tests/test_find_SWR/: test_SWR_map.py  test_find_SWR.py
tests/test_iso_relatives/: test_iso_relatives.py
tests/test_multi_optimizer/: passed_info.pickle  test_multi_optimizer.py
tests/test_path_parser/: test_path_parser.py  test_path_parser_2.py  test_path_parser_2_ref.py  tmp.py  tmp2.py
tests/test_pre_scan_restart/: ase_once_pll.py  simple_run_a_batch.py  test_checker.py  test_pre_scan.py  test_restart.py  xtbopt.xyz
tests/test_random/: ase_once_pll.py  test_random.py  test_random_OH.py  test_random_v2.py
tests/test_ref/: test_refine.py
tests/test_simple_parse_logs/: temp.py  test_simple_parse_logs.py  tmp_get_log.py
tests/test_step/: test_step.py  test_step_remote_ase.py  tmp.py  tmp2.py  tmp3.py
(+1908 files in other folders)
