[project]
name = "AutoSteper"
dynamic = ["version"]
description = "Automated Stepwise Addition Procedure for Extrafullerene."
authors = [{name = "franklalalala", email = "1660810667@qq.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Development Status :: 3 - Alpha"
]
requires-python = ">=3.6"
dependencies = [
    "importlib-metadata",
]
[tool.setuptools]
py-modules = ["src"]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[project.urls]
Source = "https://github.com/franklalalala/AutoSteper"


[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"
